# lab

./: README.md  控制器.md
SLAVES/: .mxproject  .project  SLAVES.ioc
SLAVES/CM4/: .cproject  .project  SLAVES_CM4 Debug.launch  STM32H755ZITX_FLASH.ld
SLAVES/CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
SLAVES/CM4/Core/Src/: main.c  sampleappl.c  samplehw.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
SLAVES/CM4/Debug/: SLAVES_CM4.elf  SLAVES_CM4.list  SLAVES_CM4.map  makefile  objects.list  sources.mk
SLAVES/CM4/Debug/Common/Src/: subdir.mk  system_stm32h7xx_dualcore_boot_cm4_cm7.cyclo  system_stm32h7xx_dualcore_boot_cm4_cm7.d  system_stm32h7xx_dualcore_boot_cm4_cm7.su
SLAVES/CM4/Debug/Core/Src/: freertos.d  main.cyclo  main.d  main.su  sampleappl.cyclo  sampleappl.d  sampleappl.su  samplehw.cyclo  samplehw.d  samplehw.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_hal_timebase_tim.d  stm32h7xx_it.cyclo  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk
SLAVES/CM4/Debug/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.d  stm32h7xx_hal.su  stm32h7xx_hal_cortex.cyclo  stm32h7xx_hal_cortex.d  stm32h7xx_hal_cortex.su  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma.su  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_dma_ex.su  stm32h7xx_hal_exti.cyclo  stm32h7xx_hal_exti.d  stm32h7xx_hal_exti.su  stm32h7xx_hal_flash.cyclo  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash.su  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_flash_ex.su  stm32h7xx_hal_gpio.d  stm32h7xx_hal_gpio.su  stm32h7xx_hal_hsem.cyclo  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c.su  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.cyclo  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pwr.cyclo  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_rcc_ex.su  stm32h7xx_hal_spi.cyclo  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi.su  stm32h7xx_hal_spi_ex.cyclo  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_spi_ex.su  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.cyclo  (+3 more)
SLAVES/CM4/Debug/EtherCAT/src/: coeappl.cyclo  coeappl.d  coeappl.su  ecatappl.cyclo  ecatappl.d  ecatappl.su  ecatcoe.cyclo  ecatcoe.d  ecatcoe.su  ecatslv.cyclo  ecatslv.d  (+11 more)
SLAVES/CM4/Debug/IK/: subdir.mk
SLAVES/CM4/Debug/OPENAMP/: mbox_hsem.d  subdir.mk
SLAVES/CM4/EtherCAT/inc/: ecat_def.h  ecatfoe.h  ecatslv.h  node1.h  node1Objects.h  sampleappl.h  sampleapplObjects.h  samplehw.h
SLAVES/CM4/EtherCAT/src/: coeappl.c  ecatappl.c  ecatslv.c
SLAVES/CM7/: .cproject  .project  SLAVES_CM7 Debug.launch  STM32H755ZITX_FLASH.ld
SLAVES/CM7/Core/Inc/: main.h  stm32h7xx_it.h
SLAVES/CM7/Core/Src/: main.c  stm32h7xx_it.c
SLAVES/CM7/Debug/: SLAVES_CM7.elf  SLAVES_CM7.list  SLAVES_CM7.map  makefile  objects.list
SLAVES/CM7/Debug/OPENAMP/: subdir.mk
master/: CMakeLists.txt  main.cpp  main.h
master/EtherCAT/: EtherCAT.cpp  EtherCAT.h
master/Jacobian_S/: Jacobian_S.c  Jacobian_S.h  Jacobian_S_data.h  Jacobian_S_emxutil.c  Jacobian_S_emxutil.h  Jacobian_S_initialize.c  Jacobian_S_initialize.h  Jacobian_S_rtwutil.c  Jacobian_S_rtwutil.h  Jacobian_S_terminate.c  Jacobian_S_terminate.h  Jacobian_S_types.h  combineVectorElements.c  combineVectorElements.h  mrdivide_helper.c  mrdivide_helper.h  roots.c  roots.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  xdlahqr.c  xdlahqr.h  xdlanv2.c  xdlanv2.h  xnrm2.c  xnrm2.h  xzgebal.c  xzgebal.h  xzgehrd.c  xzgehrd.h  xzlascl.c  xzlascl.h
master/Kinematics/: FK_7DOF.c  FK_7DOF.h  FK_7DOF_data.c  FK_7DOF_data.h  FK_7DOF_initialize.c  FK_7DOF_initialize.h  FK_7DOF_internal_types.h  FK_7DOF_terminate.c  FK_7DOF_terminate.h  FK_7DOF_types.h  IK_7DOF.c  IK_7DOF.h  IK_7DOF_data.c  IK_7DOF_data.h  IK_7DOF_initialize.c  IK_7DOF_initialize.h  IK_7DOF_terminate.c  IK_7DOF_terminate.h  IK_7DOF_types.h  atan.c  atan.h  checkStoppingCriteria.c  checkStoppingCriteria.h  computeFiniteDifferences.c  computeFiniteDifferences.h  driver.c  driver.h  exp.c  exp.h  finDiffEvalAndChkErr.c  finDiffEvalAndChkErr.h  kinematics.h  linearLeastSquares.c  linearLeastSquares.h  log.c  log.h  mtimes.c  mtimes.h  norm.c  norm.h  (+30 more)
master/control/: admittance_controller.h  pid_controller.h  teaching.h
master/interface/: cmdpanel.cpp  cmdpanel.h
master/lib/EtherCAT/: EtherCAT.cpp  EtherCAT.h
master/lib/Jacobian_S/: Jacobian_S.c  Jacobian_S_data.h  Jacobian_S_emxutil.h  Jacobian_S_initialize.c  Jacobian_S_initialize.h  Jacobian_S_rtwutil.h  Jacobian_S_terminate.c  Jacobian_S_types.h  combineVectorElements.h  mrdivide_helper.c  mrdivide_helper.h  roots.h  rt_defines.h  rt_nonfinite.c  rtwtypes.h  xdlahqr.h  xnrm2.c  xnrm2.h  xzgebal.c  xzlascl.c
master/lib/Kinematics/: FK_7DOF.h  FK_7DOF_data.c  FK_7DOF_data.h  FK_7DOF_internal_types.h  FK_7DOF_terminate.c  FK_7DOF_terminate.h  FK_7DOF_types.h  IK_7DOF.c  IK_7DOF.h  IK_7DOF_types.h  atan.c  checkStoppingCriteria.h  driver.c  driver.h  finDiffEvalAndChkErr.c  finDiffEvalAndChkErr.h  kinematics.h  mtimes.c  mtimes.h  power.c  power.h  rt_wutil.h  rtwtypes.h  xdlahqr.h  xdlanv2.h  xnrm2.c  xzgebal.h  xzgehrd.h  xzlarf.h  xzlarfg.h  xzlascl.c  xzlascl.h
master/lib/control/: admittance_controller.h  joint_state.h
master/lib/feedback/: lpf.c  lpf.h
master/lib/interface/: cmdpanel.cpp
master/lib/orbbecsdk/include/libobsensor/: Camera.h
master/planning/: poly_traj.h
master45/: CMakeLists.txt  main.c  main.cpp
master45/EtherCAT/: EtherCAT.cpp  EtherCAT.h
master45/IK_7DOF/: IK_7DOF.c  IK_7DOF.h  IK_7DOF_initialize.c  IK_7DOF_initialize.h  log.c  log.h  power.c  rtGetInf.h  rtGetNaN.c
master45/inc/: IK_7DOF_data.h  IK_7DOF_rtwutil.h  IK_7DOF_terminate.h  rt_nonfinite.h
master45/interface/: EtherCAT.h  cmdpanel.cpp  cmdpanel.h
master45/src/: IK_7DOF.c  IK_7DOF_data.c  IK_7DOF_rtwutil.c  rt_nonfinite.c
master_codes/: main single.cpp  main_8motors.cpp  main_8motors_v2.cpp  main_8motors_v3.cpp  main_FTsensor.cpp  main_changing.c  main_copy.c  main_single.cpp  main_v1.c  main_v10.cpp  main_v11.cpp  main_v2.c  main_v3.c  main_v4.c  main_v6.c  main_v7.c  main_v8.c  main_v9.cpp
(+51 files in other folders)
